      e.g., \code{plot(x,y, log="y")} now signal a \emph{classed} warning
      about negative values of y (where \code{log(.)} is \code{NA}).
      Such a warning can be specifically suppressed or caught otherwise.

      \item Regular expression functions now check more thoroughly whether
      their inputs are valid strings (in their encoding, e.g.\sspace{}in UTF-8).
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{

      \item The included LAPACK sources have been updated to include the
      four Fortran 90 routines rather than their Fortran 77
      predecessors.  This may give some different signs in SVDs or
      eigendecompositions..  (This completes the transition to LAPACK
      3.10.x begun in \R 4.2.0.)

      \item A system installation of generic LAPACK 3.10.0 or later will
      be preferred to the version in the \R sources.

      \command{configure} option \option{--with-lapack=no} (equivalently
      \option{--without-lapack}) forces compilation of the internal
      LAPACK sources.

      If \option{--with-lapack} is not specified, a system
      \code{liblapack} is looked for and used if it reports version
      3.10.0 or later and does not contain BLAS routines.

      Packages using LAPACK will need to be reinstalled if this changes
      to using an external library.
    }
  }

  \subsection{FORTRAN FLAGS}{
    \itemize{
      \item The flag \option{-fno-optimize-sibling-calls} is no longer
      forced for \command{gfortran} 7 and later.  It should no longer be
      needed now using \sQuote{hidden} character-length arguments when
      calling BLAS/LAPACK routines from C/C++ is the default even for
      packages.  (Unless perhaps packages call Fortran code from C/C++
      without using \R{}'s headers and without allowing for these
      arguments.)
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \code{USE_FC_LEN_T} is the default: this uses the